--- a/src/app/Tea-Entry/Tea-Entry.component.html
+++ b/src/app/Tea-Entry/Tea-Entry.component.html
@@ -1,6 +1,6 @@
 <h2>Teas</h2>
 
-<div *ngFor="let tea of teas">
+<!-- <div *ngFor="let tea of teas">
 	<h3>
 		<a [title]="tea.name + ' details'">
 			{{tea.name}}
@@ -9,4 +9,4 @@
 	<p *ngIf="tea.taste">
 		Tasting Notes: {{tea.taste}}
 	</p>
-</div>
+</div> -->
