--- a/src/app/product-detail/product-detail.component.css
+++ b/src/app/product-detail/product-detail.component.css
@@ -1,4 +1,4 @@
-/* TeaDetailComponent's private CSS styles */
+/* ProductDetailComponent's private CSS styles */
 label {
 	display: inline-block;
 	width: 3em;
