--- a/src/app/teas/teas.component.html
+++ b/src/app/teas/teas.component.html
@@ -1,7 +1,7 @@
 <h2>Teas</h2>
 <ul class="teas">
 	<li *ngFor="let tea of teas">
-		<a routerLink="/detail/{{tea.id}}">
+		<a routerLink="/product-detail/{{tea.id}}">
 			<span class="badge">{{tea.id}}</span> {{tea.name}}
 		</a>
 	</li>
