--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 <nav>
 	<a routerLink="/dashboard">Dashboard</a>
 	<a routerLink="/teas">Teas</a>
+	<a routerLink="/signatures">Signature Cocktails</a>
 </nav>
 <router-outlet></router-outlet>
 <br><br><br><br><br>
