--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <h3>Top Teas</h3>
 <div class="grid grid-pad">
 	<a *ngFor="let tea of teas" class="col-1-4"
-	   routerLink="/detail/{{tea.id}}">
+	   routerLink="/product-detail/{{tea.id}}">
 		<div class="module tea">
 			<h4>{{tea.name}}</h4>
 		</div>
