--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,11 @@
+<!-- ======= app.component.html =======-->
 <h1>{{title}}</h1>
 <nav>
 	<a routerLink="/dashboard">Dashboard</a>
 	<a routerLink="/teas">Teas</a>
 	<a routerLink="/signatures">Signature Cocktails</a>
 </nav>
+
 <router-outlet></router-outlet>
 <br><br><br><br><br>
 <app-messages></app-messages>
