--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
+<!-- ======= dashboard.component.html =======-->
 <h3>Top Teas</h3>
 <div class="grid grid-pad">
 	<a *ngFor="let tea of teas" class="col-1-4"
