--- a/src/app/signatures/signatures.component.html
+++ b/src/app/signatures/signatures.component.html
@@ -1,3 +1,4 @@
+<!-- ======= signatures.component.html =======-->
 <h2>Signatures</h2>
 <ul class="signatures">
 	<li *ngFor="let signature of signatures">
