--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -1,9 +1,11 @@
+<!-- ======= product-detail.component.html =======-->
 <div *ngIf="tea">
 	<h2>{{tea.name}} Details</h2>
 	<div><span>Id: </span>{{tea.id}}</div>
 	<div><span>Description: </span>{{tea.description}}</div>
 	<button (click)="goBack()">go back</button>
 </div>
+
 <div *ngIf="signature">
 	<h2>{{signature.name}} Details</h2>
 	<div><span>Id: </span>{{signature.id}}</div>
